# devolutions-gateway

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  AGENTS.md  AGENT_TUNNEL_E2E_TEST.md  AGENT_TUNNEL_IDENTITY_DESIGN.md  AGENT_TUNNEL_IMPLEMENTATION_SUMMARY.md  AGENT_TUNNEL_QUIC_REWRITE_NOTES.md  AGENT_TUNNEL_VERIFICATION.md  CHANGELOG.adoc  CHANGELOG.md  Cargo.toml  DECISIONS.md  DEMO-README.md  Dockerfile  Dockerfile-win2k19  Dockerfile.agent-test  FEATURE_BRANCH_MANUAL.md  Justfile  README.md  SSH_CREDENTIAL_INJECTION_DESIGN.md  STYLE.md  VERSION  WIREGUARD_TESTING.md  agent-browser.json  build.rs  cliff.toml  clock-cut.webm  codecov.yml  config_schema.json  docker-compose.yml  enroll.nu  inject-entry.cjs  package-lock.json  package.ps1  rebuild-demo.ps1  review-followup.md  review.md  run_iperf.sh  (+8 more)
benchmarks/: Cargo.toml
benchmarks/benches/: forwarding.rs
crates/agent-tunnel/: Cargo.toml
crates/agent-tunnel-proto/: Cargo.toml
crates/agent-tunnel-proto/src/: codec.rs  control.rs  control_codec.rs  error.rs  lib.rs  session.rs  session_codec.rs  stream.rs  version.rs
crates/agent-tunnel-proto/tests/: control.rs  session.rs
crates/agent-tunnel/src/: cert.rs  enrollment_store.rs  integration_test.rs  lib.rs  listener.rs  registry.rs  routing.rs  stream.rs
crates/ascii-streamer/: Cargo.toml
crates/ascii-streamer/examples/: decode_trp.rs
crates/ascii-streamer/src/: lib.rs  trp_decoder.rs
crates/devolutions-agent-shared/: Cargo.toml
crates/devolutions-agent-shared/src/: agent_auto_update.rs  date_version.rs  lib.rs  temp_file.rs  update_json.rs  update_manifest.rs  update_status.rs
crates/devolutions-gateway-generators/: Cargo.toml
crates/devolutions-gateway-generators/src/: lib.rs
crates/devolutions-gateway-task/: Cargo.toml
crates/devolutions-gateway-task/src/: lib.rs
crates/devolutions-log/: Cargo.toml  README.md
crates/devolutions-pedm/: Cargo.toml  build.rs  config.example.json  config.example.toml
crates/devolutions-pedm-contextmenu/: AppxManifest.xml  Cargo.toml  build.rs  mapping.txt
crates/devolutions-pedm-hook/: Cargo.toml
crates/devolutions-pedm-shared/: Cargo.toml
crates/devolutions-pedm-shell-ext/: AppxManifest.xml  Cargo.toml  build.rs  mapping.txt  resources.rc
crates/http-client-proxy/: Cargo.toml
crates/jet-proto/: Cargo.toml
devolutions-agent/: Cargo.toml  Dockerfile.psu-grpc-poc  Run-PsuGrpcAgentContainer.ps1  build.rs  resources.rc
devolutions-agent-updater/: Cargo.toml
devolutions-agent-updater/src/: main.rs
devolutions-agent/docker/: psu-grpc-entrypoint.sh
devolutions-agent/proto/: psu_agent.proto
devolutions-agent/src/: agent-updater.rs  cli_tests.rs  code_signing.rs  config.rs  domain_detect.rs  endpoint.rs  enrollment.rs  lib.rs  log.rs  main.rs  psu_powershell.rs  service.rs  session_manager.rs  tunnel.rs  tunnel_helpers.rs  verify_tunnel.rs
devolutions-agent/test_assets/: test_asset_db
devolutions-gateway/: Cargo.toml  build.rs  devolutions-gateway.mc
devolutions-gateway-agent/: Cargo.toml
devolutions-gateway-agent/src/: config.rs  main.rs  tunnel.rs
devolutions-gateway/cert/: private.pem  publicCert.pem
devolutions-gateway/doc/: api.yaml  subscriber-api.yaml
devolutions-gateway/openapi/: .gitignore  README.md  gateway-api.yaml  generate.ps1  generate_all.ps1  generate_clients.ps1  subscriber-api.yaml  update_templates.ps1
devolutions-gateway/src/: agent_store.rs  cli.rs  config.rs  credendials.rs  credential.rs  credential_injection_kdc.rs  enrollment_store.rs  extract.rs  generic_client.rs  http.rs  jet.rs  jet_client.rs  jet_rendezvous_tcp_proxy.rs  jmux.rs  job_queue.rs  jrec.rs  kdc_connector.rs  lib.rs  listener.rs  log.rs  logger.rs  main.rs  ngrok.rs  openapi.rs  plugin_manager.rs  preconnection_pdu.rs  proxy.rs  rd_clean_path.rs  rdp.rs  rdp_credential_injection.rs  rdp_extension.rs  rdp_pcb.rs  rdp_proxy.rs  recording.rs  routing_client.rs  server_stream.rs  service.rs  session.rs  ssh_proxy.rs  streaming.rs  (+12 more)
devolutions-gateway/tests/: agent_tunnel_integration.rs  agent_tunnel_registry.rs  agent_tunnel_routing.rs  config.rs  dvls_compatibility.proptest-regressions  dvls_compatibility.rs  jmux.rs  preflight.rs  tls_anchoring.rs  token_security.proptest-regressions  token_security.rs  traffic.rs  webapp.rs
devolutions-host/: Cargo.toml  build.rs
devolutions-host/src/: config.rs  dvc.rs  lib.rs  log.rs  main.rs
devolutions-session/: Cargo.toml  build.rs
devolutions-session/src/: config.rs  dvc.rs  lib.rs  log.rs  main.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: jet_message.rs  jmux_message.rs  listeners_raw.rs
jet-proto/: Cargo.toml
jet-proto/examples/: client.rs
jet-proto/fuzz/: Cargo.toml
jet-proto/spec/: JET_Proto.docx
jet-proto/src/: accept.rs  connect.rs  lib.rs  test.rs  token.rs  utils.rs
jet-proto/tests/: common.rs  jet_client.rs  rdp.rs  routing_client.rs
jetify/: ApiHooks.c  ApiHooks.h  CMakeLists.txt  Jetify.c  Jetify.h  Logger.c  Logger.h  Utils.c  Utils.h  WSMan.c  WSMan.h
jetify/nuget/: Devolutions.Jetify.nuspec  Devolutions.Jetify.targets
jetsocat/: Cargo.toml  build.rs  resources.rc
jetsocat/nuget/: .gitignore  Devolutions.Jetsocat.nuspec  Devolutions.Jetsocat.targets  package.ps1
jetsocat/proxy/: Cargo.toml  README.md
jetsocat/src/: client.rs  doctor.rs  io.rs  jet.rs  jmux.rs  lib.rs  listener.rs  main.rs  mcp.rs  pipe.rs  process_watcher.rs  proxy.rs  server.rs  tcp_proxy.rs  utils.rs
jetsocat/tests/: socks5-to-jmux.proptest-regressions  socks5-to-jmux.rs  socks5-udp-associate.rs
jmux-proxy/: Cargo.toml
jmux-proxy/src/: codec.rs  config.rs  id_allocator.rs  lib.rs
picky-krb/: Cargo.toml
picky-krb/src/: application_tag.rs  data_types.rs  length.rs  lib.rs  messages.rs
rdp-proto/: Cargo.toml
rdp-proto/fuzz/: Cargo.toml
rdp-proto/src/: ber.rs  credssp.rs  encryption.rs  gcc.rs  lib.rs  mcs.rs  nego.rs  ntlm.rs  per.rs  rdp.rs  sspi.rs  tpdu.rs
testsuite/: Cargo.toml
testsuite/src/: cli.rs  dgw_config.rs  lib.rs  mcp_client.rs  mcp_server.rs
testsuite/tests/: main.rs  mcp_proxy.rs
(+2547 files in other folders)
