[workspace]
resolver = "2"
members = [
    "devolutions-gateway",
    "jetsocat",
    "crates/*",
    "tools/generate-openapi",
]
default-members = [
    "devolutions-gateway",
    "jetsocat",
]

# TODO: clean and fix compilation of the sogar component
exclude = [
    "crates/sogar-registry"
]

[profile.production]
inherits = "release"
lto = true

[patch.crates-io]
tracing-appender = { git = "https://github.com/CBenoit/tracing.git", rev = "454313f66da3a662" }
tokio-tungstenite = { git = "https://github.com/snapview/tokio-tungstenite.git", rev = "a6c2d13e1f4919c" }
