[workspace]
resolver = "2"
members = [
    "devolutions-agent",
    "devolutions-gateway",
    "jetsocat",
    "crates/*",
    "tools/generate-openapi",
]
default-members = [
    "devolutions-gateway",
    "jetsocat",
]

# TODO: clean and fix compilation of the sogar component
exclude = [
    "crates/sogar-registry"
]

[profile.production]
inherits = "release"
lto = true

[patch.crates-io]
tracing-appender = { git = "https://github.com/CBenoit/tracing.git", rev = "42097daf92e683cf18da7639ddccb056721a796c" }
