[package]
name = "devolutions-agent"
version.workspace = true
edition = "2024"
license = "MIT/Apache-2.0"
authors = ["Devolutions Inc. <infos@devolutions.net>"]
description = "Agent companion service for Devolutions Gateway"
build = "build.rs"
publish = false

[lints]
workspace = true

[dependencies]
agent-tunnel-proto = { path = "../crates/agent-tunnel-proto" }
anyhow = "1"
backoff = "0.4"
async-trait = "0.1"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "original-uri", "matched-path"] }
base64 = "0.22"
bytes = "1"
camino = { version = "1.1", features = ["serde1"] }
ceviche = "0.7"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.5"
devolutions-agent-shared = { path = "../crates/devolutions-agent-shared" }
devolutions-gateway-task = { path = "../crates/devolutions-gateway-task" }
devolutions-log = { path = "../crates/devolutions-log" }
futures = "0.3"
hex = "0.4"
hostname = "0.4"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto", "service"] }
http-client-proxy = { path = "../crates/http-client-proxy" }
ipnetwork = "0.20"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
now-policy = "0.1"
now-policy-api = { version = "0.1", features = ["policy-compat"] }
now-policy-server-template = { version = "0.1", features = ["policy-compat"] }
parking_lot = "0.12"
prost = "0.13"
prost-types = "0.13"
quinn = "0.11"
rand = "0.8" # FIXME(@CBenoit): maybe we don't need this crate
rcgen = { version = "0.13", features = ["pem"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "http2", "socks", "json"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pemfile = "2.2"
rustls-pki-types = "1"
sha2 = "0.10"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tap = "1.0"
tempfile = "3"
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport"] }
tower-service = "0.3"
tracing = "0.1"
url = { version = "2.5", features = ["serde"] }
x509-parser = "0.16"
uuid = { version = "1.23", features = ["v4", "serde"] }

[dependencies.ironrdp]
version = "0.17"
default-features = false
features = [
    "server", # FIXME(@CBenoit): this is enabling AWS LC unconditionally.
    "acceptor",
]

[dependencies.tokio]
version = "1.52"
features = [
    "signal",
    "net",
    "io-util",
    "rt",
    "rt-multi-thread",
    "macros",
    "parking_lot",
    "fs",
    "process",
    "sync",
    "time",
]

[target.'cfg(windows)'.dependencies]
aws-lc-rs = "1.15"
time = { version = "0.3", features = ["local-offset", "macros", "parsing"] }
devolutions-pedm = { path = "../crates/devolutions-pedm" }
notify-debouncer-mini = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "http2", "socks"] }
thiserror = "2"
uuid = { version = "1.17", features = ["v4"] }
win-api-wrappers = { path = "../crates/win-api-wrappers" }

[target.'cfg(windows)'.dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_Security_Cryptography",
    "Win32_Security_Authorization",
    "Win32_System_ApplicationInstallationAndServicing",
    "Win32_System_Pipes",
    "Win32_System_RemoteDesktop",
]

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"

[target.'cfg(windows)'.dev-dependencies]
expect-test = "1.5"
