[package]
name = "devolutions-gateway-agent"
version = "2026.1.0"
authors = ["Devolutions Inc. <infos@devolutions.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"

# WireGuard
boringtun = "0.7"

# Internal crates
tunnel-proto = { path = "../crates/tunnel-proto" }
wireguard-tunnel = { path = "../crates/wireguard-tunnel" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
bytes = "1.10"
dashmap = "6.1"
parking_lot = "0.12"
uuid = { version = "1.11", features = ["serde", "v4"] }
ipnetwork = "0.20"
base64 = "0.22"
rand = "0.8"
zeroize = "1.8"

# CLI
clap = { version = "4.5", features = ["derive"] }
