[package]
name = "devolutions-gateway"
version = "2024.2.0"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
authors = ["Devolutions Inc. <infos@devolutions.net>"]
description = "Protocol-aware fine-grained relay server"
publish = false
default-run = "devolutions-gateway"

[features]
default = []
openapi = ["dep:utoipa"]

[dependencies]

# In-house
transport = { path = "../crates/transport" }
jmux-proxy = { path = "../crates/jmux-proxy" }
devolutions-gateway-task = { path = "../crates/devolutions-gateway-task" }
ironrdp-pdu = { version = "0.1", git = "https://github.com/Devolutions/IronRDP", rev = "4844e77b7f65024d85ba74b1824013eda6eb32b2" }
ironrdp-rdcleanpath = { version = "0.1", git = "https://github.com/Devolutions/IronRDP", rev = "4844e77b7f65024d85ba74b1824013eda6eb32b2" }
ceviche = "0.6"
picky-krb = "0.8"
network-scanner = { version = "0.0.0", path = "../crates/network-scanner" }

# Serialization
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"

# Utils, misc
hostname = "0.4"
camino = { version = "1.1", features = ["serde1"] }
smol_str = { version = "0.2", features = ["serde"] }
nonempty = "0.9"
tap = "1.0"
lazy_static = "1.4"
bytes = "1.6"
cfg-if = "1.0"
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.5", features = ["v4", "serde"] }
time = { version = "0.3", default-features = false, features = ["std", "serde", "formatting"] }
parking_lot = "0.12"
anyhow = "1.0"
thiserror = "1"
typed-builder = "0.18"
backoff = "0.4"
sysinfo = "0.30"

# Security, crypto…
picky = { version = "7.0.0-rc.8", default-features = false, features = ["jose", "x509", "pkcs12"] }
zeroize = { version = "1.7", features = ["derive"] }
multibase = "0.9"
argon2 = { version = "0.5", features = ["std"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "parking_lot", "smallvec", "local-time", "tracing-log"] }
tracing-appender = "0.2"
# TODO: consider `tracing-error` crate

# Async, futures…
tokio = { version = "1.37", features = ["signal", "net", "io-util", "time", "rt", "rt-multi-thread", "sync", "macros", "parking_lot", "fs"] }
tokio-rustls = { version = "0.24", features = ["dangerous_configuration", "tls12"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json"] } # TODO: directly use hyper in subscriber module
futures = "0.3"
async-trait = "0.1"
tower = { version = "0.4", features = ["timeout"] }
ngrok = "0.13"

# HTTP
hyper = "1.3"
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
axum = { version = "0.7", default-features = false, features = ["http1", "json", "ws", "query", "tracing", "tower-log"] }
axum-extra = { version = "0.9", features = ["query", "async-read-body", "typed-header"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tungstenite = "0.21" # Should be the same version as `axum` (we perform error downcasting for better error reporting)

# OpenAPI generator
utoipa = { version = "4.2", default-features = false, features = ["uuid", "time"], optional = true }

# Safe pin projection
pin-project-lite = "0.2"

# Native plugins
dlopen = "0.1"
dlopen_derive = "0.1"

# Dependencies required for PCAP support (FIXME: should we keep that built-in?)
pcap-file = "2.0"
# TODO: replace with https://lib.rs/crates/etherparse (still maintained + less dependencies)
packet = { git = "https://github.com/fdubois1/rust-packet.git" }

# For KDC proxy
portpicker = "0.1"

[target.'cfg(windows)'.dependencies]
rustls-cng = "0.3"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.4"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.3"
rstest = "0.19"
devolutions-gateway-generators = { path = "../crates/devolutions-gateway-generators" }
http-body-util = "0.1"
tracing-cov-mark = { path = "../crates/tracing-cov-mark" }
