[package]
name = "devolutions-gateway"
version.workspace = true
edition = "2024"
readme = "README.md"
license = "MIT/Apache-2.0"
authors = ["Devolutions Inc. <infos@devolutions.net>"]
description = "Protocol-aware fine-grained relay server"
publish = false
default-run = "devolutions-gateway"

[lints]
workspace = true

[features]
default = []
openapi = ["dep:utoipa"]

[dependencies]

# In-house
transport.path = "../crates/transport"
jmux-proxy.path = "../crates/jmux-proxy"
devolutions-agent-shared.path = "../crates/devolutions-agent-shared"
devolutions-gateway-task.path = "../crates/devolutions-gateway-task"
devolutions-log.path = "../crates/devolutions-log"
job-queue.path = "../crates/job-queue"
job-queue-libsql.path = "../crates/job-queue-libsql"
traffic-audit.path = "../crates/traffic-audit"
traffic-audit-libsql.path = "../crates/traffic-audit-libsql"
network-scanner.path = "../crates/network-scanner"
video-streamer.path = "../crates/video-streamer"
terminal-streamer.path = "../crates/terminal-streamer"
network-monitor.path = "../crates/network-monitor"
sysevent.path = "../crates/sysevent"
sysevent-codes.path = "../crates/sysevent-codes"
ironrdp-pdu = { version = "0.5", features = ["std"] }
ironrdp-core = { version = "0.1", features = ["std"] }
ironrdp-rdcleanpath = "0.1"
ironrdp-tokio = "0.6"
ironrdp-connector = { version = "0.6" }
ironrdp-acceptor = { version = "0.6" }
ceviche = "0.7"
picky-krb = "0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
serde-querystring = "0.3.0"

# Utils, misc
hostname = "0.4"
camino = { version = "1.1", features = ["serde1"] }
smol_str = { version = "0.3", features = ["serde"] }
nonempty = "0.12"
tap = "1.0"
bytes = "1.10"
cfg-if = "1.0"
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
time = { version = "0.3", default-features = false, features = ["std", "serde", "formatting"] }
parking_lot = "0.12"
anyhow = "1.0"
thiserror = "2"
typed-builder = "0.21"
backoff = "0.4"
sysinfo = { version = "0.35", default-features = false, features = ["disk"] }
dunce = "1.0"
bitflags = "2.9"

# Security, crypto…
picky = { version = "7.0.0-rc.15", default-features = false, features = ["jose", "x509", "pkcs12", "time_conversion"] }
zeroize = { version = "1.8", features = ["derive"] }
multibase = "0.9"
argon2 = { version = "0.5", features = ["std"] }
x509-cert = { version = "0.2", default-features = false, features = ["std"] }

# Logging
tracing = "0.1"

# Async, futures…
tokio = { version = "1.45", features = ["signal", "net", "io-util", "time", "rt", "rt-multi-thread", "sync", "macros", "parking_lot", "fs"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json", "stream", "http2", "system-proxy", "socks"] }
futures = "0.3"
async-trait = "0.1"
tower = { version = "0.5", features = ["timeout"] }
ngrok = "0.13"

# HTTP
hyper = "1.6"
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
axum = { version = "0.8", default-features = false, features = ["http1", "json", "ws", "query", "tracing", "tower-log"] }
axum-extra = { version = "0.10", features = ["query", "async-read-body", "typed-header"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tungstenite = "0.26" # Should be the same version as `axum` (we perform error downcasting for better error reporting)
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] } # Should use the same version of tungstenite as `axum`
http-body-util = "0.1"

# OpenAPI generator
utoipa = { version = "4.2", default-features = false, features = ["uuid", "time"], optional = true }

# Safe pin projection
pin-project-lite = "0.2"

# Native plugins
# QUESTION: now that we have Cadeau integrated, should we remove this feature?
# FIXME: these libraries are considered unmaintained. We could use dlopen2 (to audit).
dlopen = "0.1"
dlopen_derive = "0.1"

# Video processing for session recording
cadeau = { version = "0.5", features = ["dlopen"] }

# Dependencies required for PCAP support
# QUESTION: should we keep that built-in?
pcap-file = "2.0"
etherparse = "0.15"

# For KDC proxy
portpicker = "0.1"

[target.'cfg(unix)'.dependencies]
sysevent-syslog.path = "../crates/sysevent-syslog"

[target.'cfg(windows)'.dependencies]
rustls-cng = { version = "0.5", default-features = false, features = ["logging", "tls12", "ring"] }
sysevent-winevent.path = "../crates/sysevent-winevent"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.7"
rstest = "0.25"
devolutions-gateway-generators = { path = "../crates/devolutions-gateway-generators" }
http-body-util = "0.1"
tracing-cov-mark = { path = "../crates/tracing-cov-mark" }
tracing-subscriber = "0.3"
expect-test = "1.5"
