[package]
name = "devolutions-session"
version.workspace = true
edition = "2024"
license = "MIT/Apache-2.0"
authors = ["Devolutions Inc. <infos@devolutions.net>"]
description = "Session host application for Devolutions Agent"
build = "build.rs"
publish = false

[lints]
workspace = true

[features]
default = ["dvc"]
dvc = [
    "dep:async-trait",
    "dep:windows",
    "dep:now-proto-pdu",
    "dep:tempfile",
    "dep:thiserror",
    "dep:win-api-wrappers",
]

[dependencies]
anyhow = "1.0"
camino = { version = "1.1", features = ["serde1"] }
cfg-if = "1"
ctrlc = "3.4"
devolutions-log = { path = "../crates/devolutions-log" }
devolutions-gateway-task = { path = "../crates/devolutions-gateway-task" }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tap = "1.0"
tracing = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["macros", "sync", "time"] }

async-trait = { version = "0.1", optional = true }
tempfile = { version = "3", optional = true }
thiserror = { version = "2", optional = true }
win-api-wrappers = { path = "../crates/win-api-wrappers", optional = true }

[dependencies.now-proto-pdu]
optional = true
version = "0.3.0"
features = ["std"]

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61"
optional = true
features = [
    "Win32_Foundation",
    "Win32_System_Shutdown",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Console",
    "Win32_UI_Input_KeyboardAndMouse",
]
