[package]
name = "fuzz"
version = "0.0.0"
authors = ["Devolutions Inc. <infos@devolutions.net>"]
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
jmux-proto = { path = "../crates/jmux-proto" }
jet-proto = { path = "../crates/jet-proto" }
devolutions-gateway = { path = "../devolutions-gateway" }
libfuzzer-sys = "0.4"
bytes = "1.1"
url = "2.2"
tokio = "1.14"
slog = "2.7"
get-port = "4.0"
parking_lot = "0.12"

# Prevent this from interfering with workspaces
[workspace]
resolver = "2"
members = ["."]

[[bin]]
name = "jmux_message"
path = "fuzz_targets/jmux_message.rs"
test = false
doc = false

[[bin]]
name = "jet_message"
path = "fuzz_targets/jet_message.rs"
test = false
doc = false

[[bin]]
name = "listeners_raw"
path = "fuzz_targets/listeners_raw.rs"
test = false
doc = false
