[package]
name = "jet-proto"
version = "0.1.0"
edition = "2018"
authors = ["Francois Dubois <fdubois@devolutions.net>"]

[dependencies]
log = "0.4.6"
byteorder = "1.2.7"
uuid = { version = "0.8", features = ["v4", "serde"] }
httparse = "1.3.4"
http = "0.1.18"

hex-literal = "0.2"

serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
ironrdp = { version = "0.4.1", git = "https://github.com/Devolutions/IronRDP", rev = "ca53209c84c55b41" }
lazy_static = "1.2.0"
bytes = "0.5"
sspi = "0.3.0"
reqwest = "0.11"
serde_json = "1.0"
url = "1.7.1"
x509-parser = "0.6.0"
exitcode = "1.1"
tempfile = "3.0"

[dependencies.tokio-rustls]
git = "https://github.com/tokio-rs/tls.git"
rev = "a517e1d0a636359c4e54b0735d7f4e73b786d2c0"
features = ["dangerous_configuration"]
