[package]
name = "jet-proto"
version = "0.1.0"
edition = "2021"
authors = ["Francois Dubois <fdubois@devolutions.net>"]

[dependencies]
log = "0.4"
byteorder = "1.2"
uuid = { version = "0.8", features = ["v4"] }
httparse = "1.3"
http = "0.2"

[dev-dependencies]
lazy_static = "1"
bytes = "0.5"
sspi = "0.3.0"
ureq = { version = "2", features = ["json"] }
url = "2.2"
x509-parser = "0.6"
exitcode = "1.1"
tempfile = "3.0"
hex-literal = "0.2"
ironrdp = { version = "0.4", git = "https://github.com/Devolutions/IronRDP", rev = "ca53209c84c55b41" }
tokio-rustls = { git = "https://github.com/tokio-rs/tls.git", rev = "a517e1d0a636359c4e54b0735d7f4e73b786d2c0", features = ["dangerous_configuration"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
