[package]
name = "jet-proto"
version = "0.1.0"
edition = "2021"
authors = ["Devolutions Inc."]

[dependencies]
log = "0.4.14"
byteorder = "1.4.3"
uuid = { version = "0.8.2", features = ["v4"] }
httparse = "1.5.1"
http = "0.2.5"

[dev-dependencies]
lazy_static = "1.4.0"
bytes = "1.1.0"
sspi = "0.3.2"
ureq = { version = "2.3.1", features = ["json"] }
url = "2.2.2"
x509-parser = "0.12.0"
exitcode = "1.1.2"
tempfile = "3.2.0"
hex-literal = "0.3.4"
ironrdp = { version = "0.4", git = "https://github.com/Devolutions/IronRDP", rev = "ca53209c84c55b41" }
tokio-rustls = { version = "0.23.1", features = ["dangerous_configuration"] }
serde = "1.0.131"
serde_derive = "1.0.131"
serde_json = "1.0.72"
